fixed text size on mobile screen

--- a/day2/style.css
+++ b/day2/style.css
@@ -28,7 +28,7 @@ body {
 
 @media only screen and (max-width: 650px) {
    .box p {
-   	font-size: 2.5em;
+   	font-size: 2em;
    }
    
 }
